[package]
name = "opahelper"
version = "0.1.3"
authors = ["Alberto Rodriguez Garcia <agarcia@schubergphilis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
error-chain = "0.12.4"
flate2 = "1.0.19"
log = "0.4.13"
json = "0.12.4"
reqwest = "0.11.0"
serde_json = "1.0.61"
simple_logger = "1.11.0"
tar = "0.4.30"
tempfile = "3.2.0"
tokio = {version = "1.0.2", features = ["full"]}
url = "2.2.0"
http = "0.2.3"