[package]
name = "opahelper"
version = "0.1.5"
authors = ["Alberto Rodriguez Garcia <agarcia@schubergphilis.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
error-chain = "0.12.4"
flate2 = "1.0.19"
log = "0.4.14"
json = "0.12.4"
reqwest = "0.11.0"
serde_json = "1.0.61"
simple_logger = "1.11.0"
tar = "0.4.32"
tempfile = "3.2.0"
tokio = {version = "1.1.0", features = ["full"]}
url = "2.2.0"
http = "0.2.3"